# moedit

./: .gitignore  Cargo.toml  db  watched.txt
src/: data.rs  io.rs  lib.rs  main.rs  mode.rs  script.rs  util.rs
src/data/: table.rs  tree.rs
src/io/: file.rs  main.rs  parse.rs
src/mode/: def.rs  key.rs
src/script/: node.rs  parse.rs  tokenize.rs  tokensimple.rs
src/tests/: main.rs
src/util/: func.rs  mcr.rs
