[package]
name = "moedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozo = "0.7.5"
cstree = { version = "0.12.0", features = ["derive"]}
nom = "7.1.3"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
pretty = "0.12.3"
tabled = "0.14.0"
termion = "2.0.3"
